Fixed overflow

--- a/src/sass/partials/_article.scss
+++ b/src/sass/partials/_article.scss
@@ -1,7 +1,7 @@
 article {
     width: 960px;
     @include screen-less(400px) {
-        width: 90vw;
+        
     }
     display: block;
     margin: 0 auto;
